https://itihaas-desai.github.io/health-website-japanese/

--- a/index.html
+++ b/index.html
@@ -246,3 +246,8 @@
   }
   function scrollToTop(){window.scrollTo({top:0,behavior:'smooth'});}
   document.addEventListener('keydown',function(e){
+    if(e.key.toLowerCase()==='t') scrollToTop();
+  });
+</script>
+</body>
+</html>
